# ROS2_WS

src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: ros2_controllers.yaml
src/my_robot_bringup/launch/: real_robot.launch.py
src/my_robot_canopen/: CMakeLists.txt  package.xml
src/my_robot_canopen/config/robot_bus/: bus.yml  servo_drive.eds
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_control/scripts/: three_motor_position_cli.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/urdf/: my_robot.urdf.xacro
